# geant_challenge_2022-01-17

./: README.md
backend/: README.md  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 41d227f5ff52_add_tables.py  5e160f9376ef_added_songs_and_comment_table.py  db43b211a88b_user_email_and_user_password_added_user_.py
backend/src/fastapi_demo/: config.py  main.py  models.py
backend/src/fastapi_demo/features/comments/: models.py  schemas.py  views.py
backend/src/fastapi_demo/features/songs/: app.py  models.py  schemas.py  views.py
backend/src/fastapi_demo/features/tasks/: models.py  views.py
backend/src/fastapi_demo/features/users/: auth.py  models.py  schemas.py  utils.py  views.py
frontend/: README.md  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/Comments/: index.tsx  queries.ts  types.ts
frontend/src/components/Comments/SubComponents/: CommentCreator.tsx  Header.tsx  List.tsx  index.ts
frontend/src/components/Songs/: index.tsx  queries.ts  types.ts
frontend/src/components/Songs/SubComponents/: Header.tsx  List.tsx  Single.tsx  SongCreator.tsx  index.ts
frontend/src/containers/Home/: index.tsx  queries.ts
frontend/src/utils/: request.ts  token.ts
